# cpg-flow-exomiser

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml
src/cpg_exomiser/: config_template.toml  run_workflow.py  stages.py  utils.py
src/cpg_exomiser/jobs/: CombineExomiserGeneTsvs.py  CombineExomiserVariantTsvs.py  CreateFamilyVcfs.py  MakePedExtracts.py  MakePhenopackets.py  MakeSingleFamilyPedFiles.py  MakeSingleFamilyPhenopackets.py  MakeSingleFamilyVcfs.py  RunExomiser.py
src/cpg_exomiser/scripts/: combine_exomiser_gene_tsvs.py  combine_exomiser_variant_tsvs.py
